--- a/TODO
+++ b/TODO
@@ -9,4 +9,8 @@ Terminology:
 - Page dependent cookie key values, when we change page we should remove
   the unallowed keys from the session
 / Simple HTML DSL (Creating some primities)
+- i18n for the generated HTML output
+- Pandoc interpreted input exercise input fields
+- Change FamilyName to FullName
+- Parameters for WebDriver executable
 
