--- a/TODO
+++ b/TODO
@@ -14,4 +14,5 @@ Terminology:
 - Change FamilyName to FullName
 - Parameters for WebDriver executable
 - User error codes: Snap layer, UserStory
+- Add evaulation type to the assignment
 
