--- a/TODO
+++ b/TODO
@@ -46,3 +46,4 @@ Terminology:
 - File logging
 - Assignment creation start field should be required
 - Assignment creation end   field should be required
+- New comments div
