--- a/TODO
+++ b/TODO
@@ -44,7 +44,7 @@ Terminology:
 - Upload files as solution for the assignment
 - Print and download the uploaded files
 - More helpful text on the course and course admin assignment section
-- File logging
++ File logging
 - Assignment creation start field should be required
 - Assignment creation end   field should be required
 - New comments div
