--- a/TODO
+++ b/TODO
@@ -52,3 +52,26 @@ Terminology:
   + Error page and handler
   + Remove other error page chunks
 - Webdriver tests for the new design
+
+- Create log file automatically: log/useractions.log
+- Log successful actions on registration
+- Remove 'content' from the content div
+- Change password for the given user in admin page
+- Remove user's email address, for the user role profile page
+- Place newline after username in the header
+- Set headers in the course administration page
+- Show successful actions on the course administration page
+- Set headers in the home page for the course admin
+- Set headers in the course administration page
+- Show successful action on the course administration page
+- Set header for the Group admin home page
+- Show evaulation type for the assignments
+- Set headers for the student home page
+- Set headers for the group registration page
+- Show registered courses and groups in the course group registration page
+- Some headers on the submission list page
+- Some headers on the submission details page
+- Some headers on the user submission page, for the group admin
+- Show or hide evaulation values in the user submission page for the group admin
+
+
