--- a/TODO
+++ b/TODO
@@ -74,4 +74,5 @@ Terminology:
 - Some headers on the user submission page, for the group admin
 - Show or hide evaulation values in the user submission page for the group admin
 - Server configuration in data
+- Write ifdef TEST where tests are in the files
 
