New comments div

--- a/TODO
+++ b/TODO
@@ -47,7 +47,7 @@ Terminology:
 + File logging
 - Assignment creation start field should be required
 - Assignment creation end   field should be required
-- New comments div
++ New comments div
 + Appropiate page is shown on error
   + Error page and handler
   + Remove other error page chunks
