Course admin can delete students from a course

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,3 @@
+- New Translation message: Msg_UserStory_UsersAreDeletedFromCourse
+- New Translation message: Msg_LinkText_DeleteUsersFromCourse
 - New Translation message: Msg_UserStory_SubscribedToGroup_ChangeNotAllowed
