--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+- New Translation message: Msg_UserStory_SuccessfulCourseUnsubscription
+- New Translation message: Msg_LinkText_UnsubscribeFromCourse
 - New Translation message: Msg_GroupRegistration_NoUnsubscriptionAvailable
 - New Translation message: Msg_GroupRegistration_Unsubscribe
 - New Translation message: Msg_LinkText_DeleteUsersFromGroup
