--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+- Test commit
 - New Translation message: Msg_Home_NotAdministratedTestScripts
 - New Translation message: Msg_Home_NoTestScriptWereDefined
 - New Translation message: Msg_Home_ModifyTestScriptTable
