Home: Modify course assignment from the Submission table header.

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,1 +1,2 @@
+Course admin can edit course level assignments from the Home page, not only on the Course Overview page.
 Guards against invalid data access
