See More option on comments and submissions

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,5 @@
+- See More option on comments and submissions
+
 2014-03-22
 - Session countdown timer in the page header
 - Countdown timer for the submission deadline
