--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,3 +1,5 @@
+2014-03-30
+- Open Submissions: Submissions are ordered by name, and separated into three tables
 - See More option on comments and submissions
 
 2014-03-22
